[package]
name = "audio_midi_io_common"
edition = "2021"

[lib]

[dependencies]
common = { path = '../common'}
anyhow = { workspace = true }
ctor = { workspace = true }
log = { workspace = true }
audio_midi_io_traits = { path = '../audio_midi_io_traits' }
atomic_float = { workspace = true }

[build-dependencies]