[package]
name = "audio_midi_io_dummy"
edition = "2021"

[lib]

[dependencies]
cxx = { workspace = true }
common = { path = '../common'}
audio_midi_io_traits = { path = '../audio_midi_io_traits' }
audio_midi_io_common = { path = '../audio_midi_io_common' }
anyhow = { workspace = true }
ctor = { workspace = true }
log = { workspace = true }

[build-dependencies]
cxx-build = { workspace = true }