[package]
name = "backend"
edition = "2021"

[lib]

[[bin]]
name = "print_backend_build_info"
path = "src/bin/print_backend_build_info.rs"

[dependencies]
common = { path = "../common" }
refilling_pool = { path = "../refilling_pool" }

[build-dependencies]
common = { path = "../common" }
refilling_pool = { path = "../refilling_pool", artifact = "staticlib" }
cmake = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }

[features]
# Dummy build to build dependencies only
prebuild = ["common/prebuild", "refilling_pool/prebuild"]