[package]
name = "backend"
edition = "2021"

[lib]

[[bin]]
name = "print_backend_build_info"
path = "src/bin/print_backend_build_info.rs"

[dependencies]
common = { path = "../common" }
refilling_pool = { path = "../refilling_pool" }
backend_rust = { path = "../backend_rust" }
log = { workspace = true }
ctor = { workspace = true }

[build-dependencies]
common = { path = "../common" }
refilling_pool = { path = "../refilling_pool", artifact = "staticlib" }
backend_rust = { path = "../backend_rust", artifact = "staticlib" }
cmake = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }

[features]
# Dummy build to build dependencies only
prebuild = ["common/prebuild", "refilling_pool/prebuild", "backend_rust/prebuild"]
# Enable code coverage in the CMake build using 
coverage = []