[package]
name = "backend_bindings"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0"
static_assertions = "1.1"
backend = { path = "../backend" }

[build-dependencies]
bindgen = "0.70.1"
anyhow = "1.0"
backend = { path = "../backend" }

[features]
# Dummy build to build dependencies only
prebuild = []