[package]
name = "backend_bindings"
edition = "2021"

[lib]

[dependencies]
backend = { path = "../backend" }

anyhow = { workspace = true }
static_assertions = { workspace = true }

[build-dependencies]
backend = { path = "../backend" }

bindgen = { workspace = true }
anyhow = { workspace = true }

[features]
# Dummy build to build dependencies only
prebuild = []