[package]
name = "backend_rust"
links = "backend_rust"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
crossbeam-queue = { workspace = true }
cxx = { workspace = true }
log = { workspace = true }
parking_lot = "0.12"

[dev-dependencies]
anyhow = "1.0"

[build-dependencies]
cxx-build = { workspace = true }

[features]
prebuild = []
