[package]
name = "backend_rust"
links = "backend_rust"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
crossbeam-queue = "0.3"
cxx = "=1.0.194"
libc = "0.2"
log = "0.4"
parking_lot = "0.12"
regex = "1.10"

[dev-dependencies]
anyhow = "1.0"

[build-dependencies]
cxx-build = "=1.0.194"

[features]
prebuild = []
