[package]
name = "backend_rust"
links = "backend_rust"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = "1.0"
crossbeam-queue = "0.3"
cxx = "=1.0.194"
jack-sys = { version = "0.5", features = ["dynamic_loading"] }
libc = "0.2"
log = "0.4"
parking_lot = "0.12"
regex = "1.10"

[build-dependencies]
cxx-build = "=1.0.194"

[features]
prebuild = []
