[package]
name = "common"
edition = "2021"

[lib]

[dependencies]
log = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
ctor = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true }
tracy-client = { workspace = true }

[build-dependencies]
toml = { workspace = true }


[features]
# Dummy build to build dependencies only
prebuild = []