[package]
name = "config"
edition = "2021"

[[bin]]
name = "print_configs_dir"
path = "src/bin/print_configs_dir.rs"

[dependencies]
pyo3 = { version = "0.25", features = ["auto-initialize"] }
glob = "0.3"
anyhow = "1.0"
regex = "1.10"
copy_dir = "0.1"
common = { path = "../common" }
log = "0.4"
ctor = "0.2"
toml = "0.8"
serde = "1.0"

[build-dependencies]
anyhow = "1.0"
py_env = { path = "../py_env" }
backend = { path = "../backend" }
common = { path = "../common" }
toml = "0.8"
serde = "1.0"
log = "0.4"
ctor = "0.2"

[features]
# Dummy build to build dependencies only
prebuild = ["backend/prebuild",
            "py_env/prebuild",
            "common/prebuild"]