[package]
name = "config"
edition = "2021"

[[bin]]
name = "print_configs_dir"
path = "src/bin/print_configs_dir.rs"

[dependencies]
common = { path = "../common" }

glob = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
copy_dir = { workspace = true }
log = { workspace = true }
ctor = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

[build-dependencies]
backend = { path = "../backend" }
common = { path = "../common" }

anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
ctor = { workspace = true }